# Negotiation-Agent

./: .env  .gitignore  README.md  SOUL.md  negotiation.db  pyproject.toml  requirements.txt  test_ui.html
agent_testing/: test_agent.py
app/: main.py
app/api/routes/: chat.py  negotiations.py  routes.py  suppliers.py
app/core/: config.py  database.py  logging.py
app/db/: session.py  sqlite.db
app/integrations/: gemini_client.py
app/models/: __init__.py  message.py  models.py  negotiation.py  negotiation_supplier.py  offer.py  supplier.py
app/repositories/: base.py  message_repo.py  negotiation_repo.py  offer_repo.py  supplier_repo.py
app/schemas/: __init__.py  message.py  negotiation.py  offer.py  schemas.py  supplier.py
app/services/: agent_service.py  business_service.py  gemini_client.py  knowledge_builder.py  negotiation_agent.py
app/services/agent/: generator.py  interpreter.py  models.py  orchestrator.py  strategist.py
app/utils/: prompt_builder.py
email-server/: getRefreshToken.js  googleService.js  package-lock.json  package.json  server.js
email-server/public/: index.html  script.js  style.css
negotiation-test-ui/: index.html  openapi.txt  seller.html
