[project]
name = "negotiation-agent"
version = "0.1.0"
description = "Buyer-driven agentic negotiation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.5.0",
    "alembic>=1.13.0",
    "pydantic[email]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]